--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,7 @@ body {
   margin-top: 8%;
 }
 
+
 .access-account {
   color: black;
   font-weight: bolder;
@@ -708,7 +709,7 @@ body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
-  background-color: #f5f5f5;
+  background-color: #f5f5f591;
 }
 
 .navbar {
@@ -925,14 +926,15 @@ body {
 
 .products-container {
   width: 100%;
-  max-width: 1200px;
-  margin: auto;
+  max-width: none;
+  margin: 0;
   background-color: #ffffff;
   border-radius: 10px;
   padding: 20px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
   margin-top: 10px;
 }
+
 
 .product-table {
   width: 100%;
